--- a/package.json
+++ b/package.json
@@ -9,12 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "express-jwt": "^7.4.3",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-hook-form": "^7.30.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@hookform/resolvers": "^2.8.8",
+    "@next/eslint-plugin-next": "^12.1.5",
+    "@types/node": "^17.0.25",
+    "@types/react": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5"
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "^12.1.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-storybook": "^0.5.11",
+    "prettier": "^2.6.2",
+    "rxjs": "^7.5.5",
+    "typescript": "^4.6.3"
   }
 }
