--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "express-jwt": "^7.4.3",
     "next": "12.1.5",
+    "nookies": "^2.5.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.30.0",
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@hookform/resolvers": "^2.8.8",
     "@next/eslint-plugin-next": "^12.1.5",
+    "@types/cookie": "^0.5.1",
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
@@ -33,5 +38,8 @@
     "prettier": "^2.6.2",
     "rxjs": "^7.5.5",
     "typescript": "^4.6.3"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
