--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate:local": "dotenv -e .env.local -- npx prisma migrate dev"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^3.13.0",
     "axios": "^0.26.1",
     "express-jwt": "^7.4.3",
     "next": "12.1.5",
+    "next-auth": "^4.3.4",
     "nookies": "^2.5.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -36,6 +40,7 @@
     "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-plugin-storybook": "^0.5.11",
     "prettier": "^2.6.2",
+    "prisma": "^3.13.0",
     "rxjs": "^7.5.5",
     "typescript": "^4.6.3"
   },
